[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/ui/theme/font_small.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/ui/audio/AudioManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/UI.gd" type="Script" id=3]
[ext_resource path="res://scenes/ui/theme/theme.tres" type="Theme" id=4]

[sub_resource type="InputEventKey" id=6]
scancode = 49

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="InputEventKey" id=8]
scancode = 50

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[sub_resource type="InputEventKey" id=10]
scancode = 51

[sub_resource type="ShortCut" id=11]
shortcut = SubResource( 10 )

[sub_resource type="InputEventKey" id=5]
scancode = 16777217

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 5 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("GameMargin/GameContainer/Bottom/PanelContainer/Typed:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 338 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameMargin/GameContainer/Bottom/PanelContainer/Typed:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GameMargin/ChooserContainer/CurseChooser/PanelContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GameMargin/GameContainer/Bottom/PanelContainer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "incorrect"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("GameMargin/GameContainer/Bottom/PanelContainer/Typed:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.678431, 0.678431, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.678431, 0.678431, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.678431, 0.678431, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameMargin/GameContainer/Bottom/PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.201, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.678431, 0.678431, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.678431, 0.678431, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="UI" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="GameMargin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="GameContainer" type="VBoxContainer" parent="GameMargin"]
margin_left = 25.0
margin_top = 25.0
margin_right = 643.0
margin_bottom = 395.0
alignment = 1

[node name="Top" type="HBoxContainer" parent="GameMargin/GameContainer"]
margin_right = 618.0
margin_bottom = 70.0
custom_constants/separation = 10

[node name="TopLeft" type="VBoxContainer" parent="GameMargin/GameContainer/Top"]
margin_right = 175.0
margin_bottom = 70.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="GameMargin/GameContainer/Top/TopLeft"]
margin_right = 175.0
margin_bottom = 70.0
rect_min_size = Vector2( 175, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="GameMargin/GameContainer/Top/TopLeft/PanelContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 165.0
margin_bottom = 65.0

[node name="Clock" type="Label" parent="GameMargin/GameContainer/Top/TopLeft/PanelContainer/VBoxContainer"]
margin_right = 155.0
margin_bottom = 28.0
rect_min_size = Vector2( 140, 0 )
text = "Time: xxx"

[node name="Devils" type="Label" parent="GameMargin/GameContainer/Top/TopLeft/PanelContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 155.0
margin_bottom = 60.0
rect_min_size = Vector2( 140, 0 )
text = "Demons: xxx"

[node name="TopMid" type="VBoxContainer" parent="GameMargin/GameContainer/Top"]
margin_left = 185.0
margin_right = 464.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="RulesPanel" type="PanelContainer" parent="GameMargin/GameContainer/Top/TopMid"]
margin_right = 279.0
margin_bottom = 59.0

[node name="Rules" type="Label" parent="GameMargin/GameContainer/Top/TopMid/RulesPanel"]
margin_left = 10.0
margin_top = 5.0
margin_right = 269.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 1 )
text = " and words are in alphabetical order, "
align = 1
autowrap = true

[node name="TopRight" type="VBoxContainer" parent="GameMargin/GameContainer/Top"]
margin_left = 474.0
margin_right = 618.0
margin_bottom = 70.0
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="GameMargin/GameContainer/Top/TopRight"]
margin_right = 144.0
margin_bottom = 70.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameMargin/GameContainer/Top/TopRight/PanelContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 134.0
margin_bottom = 65.0

[node name="Score" type="Label" parent="GameMargin/GameContainer/Top/TopRight/PanelContainer/VBoxContainer"]
margin_right = 124.0
margin_bottom = 28.0
text = "Score: xxx"

[node name="Multiplier" type="Label" parent="GameMargin/GameContainer/Top/TopRight/PanelContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 124.0
margin_bottom = 60.0
text = "Multiplier: x2"

[node name="Fragments" type="HBoxContainer" parent="GameMargin/GameContainer"]
margin_top = 74.0
margin_right = 618.0
margin_bottom = 328.0
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="GameMargin/GameContainer/Fragments"]
margin_right = 128.0
margin_bottom = 254.0
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="GameMargin/GameContainer/Fragments/VBoxContainer2"]
margin_top = 60.0
margin_right = 128.0
margin_bottom = 194.0

[node name="Prefixes" type="VBoxContainer" parent="GameMargin/GameContainer/Fragments/VBoxContainer2/PanelContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 118.0
margin_bottom = 129.0
alignment = 1

[node name="Label" type="Label" parent="GameMargin/GameContainer/Fragments/VBoxContainer2/PanelContainer/Prefixes"]
margin_right = 108.0
margin_bottom = 28.0
text = "test content"

[node name="Label2" type="Label" parent="GameMargin/GameContainer/Fragments/VBoxContainer2/PanelContainer/Prefixes"]
margin_top = 32.0
margin_right = 108.0
margin_bottom = 60.0
text = "test content"

[node name="Label3" type="Label" parent="GameMargin/GameContainer/Fragments/VBoxContainer2/PanelContainer/Prefixes"]
margin_top = 64.0
margin_right = 108.0
margin_bottom = 92.0
text = "test content"

[node name="Label4" type="Label" parent="GameMargin/GameContainer/Fragments/VBoxContainer2/PanelContainer/Prefixes"]
margin_top = 96.0
margin_right = 108.0
margin_bottom = 124.0
text = "test content"

[node name="Spacer" type="HBoxContainer" parent="GameMargin/GameContainer/Fragments"]
margin_left = 132.0
margin_right = 486.0
margin_bottom = 254.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GameMargin/GameContainer/Fragments"]
margin_left = 490.0
margin_right = 618.0
margin_bottom = 254.0
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="GameMargin/GameContainer/Fragments/VBoxContainer"]
margin_top = 60.0
margin_right = 128.0
margin_bottom = 194.0

[node name="Suffixes" type="VBoxContainer" parent="GameMargin/GameContainer/Fragments/VBoxContainer/PanelContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 118.0
margin_bottom = 129.0
alignment = 1

[node name="Label" type="Label" parent="GameMargin/GameContainer/Fragments/VBoxContainer/PanelContainer/Suffixes"]
margin_right = 108.0
margin_bottom = 28.0
text = "test content"

[node name="Label2" type="Label" parent="GameMargin/GameContainer/Fragments/VBoxContainer/PanelContainer/Suffixes"]
margin_top = 32.0
margin_right = 108.0
margin_bottom = 60.0
text = "test content"

[node name="Label3" type="Label" parent="GameMargin/GameContainer/Fragments/VBoxContainer/PanelContainer/Suffixes"]
margin_top = 64.0
margin_right = 108.0
margin_bottom = 92.0
text = "test content"

[node name="Label4" type="Label" parent="GameMargin/GameContainer/Fragments/VBoxContainer/PanelContainer/Suffixes"]
margin_top = 96.0
margin_right = 108.0
margin_bottom = 124.0
text = "test content"

[node name="Bottom" type="HBoxContainer" parent="GameMargin/GameContainer"]
margin_top = 332.0
margin_right = 618.0
margin_bottom = 370.0
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="GameMargin/GameContainer/Bottom"]
margin_left = 134.0
margin_right = 484.0
margin_bottom = 38.0

[node name="Typed" type="Label" parent="GameMargin/GameContainer/Bottom/PanelContainer"]
margin_top = 338.0
margin_right = 330.0
margin_bottom = 366.0
rect_min_size = Vector2( 330, 28 )
align = 1

[node name="StartContainer" type="CenterContainer" parent="GameMargin"]
margin_left = 25.0
margin_top = 25.0
margin_right = 643.0
margin_bottom = 395.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameMargin/StartContainer"]
margin_left = 244.0
margin_top = 121.0
margin_right = 374.0
margin_bottom = 248.0
custom_constants/separation = 20

[node name="PanelContainer" type="PanelContainer" parent="GameMargin/StartContainer/VBoxContainer"]
margin_right = 130.0
margin_bottom = 69.0

[node name="GameOver" type="Label" parent="GameMargin/StartContainer/VBoxContainer/PanelContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 120.0
margin_bottom = 64.0
text = "Mind your
Ps are Qs"
align = 1

[node name="StartButton" type="Button" parent="GameMargin/StartContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 130.0
margin_bottom = 127.0
text = "Start Game"

[node name="ChooserContainer" type="CenterContainer" parent="GameMargin"]
margin_left = 25.0
margin_top = 25.0
margin_right = 643.0
margin_bottom = 395.0

[node name="CurseChooser" type="VBoxContainer" parent="GameMargin/ChooserContainer"]
margin_left = 226.0
margin_top = 86.0
margin_right = 391.0
margin_bottom = 283.0
custom_constants/separation = 15

[node name="PanelContainer" type="PanelContainer" parent="GameMargin/ChooserContainer/CurseChooser"]
margin_right = 165.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="GameMargin/ChooserContainer/CurseChooser/PanelContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 155.0
margin_bottom = 33.0
text = "Choose a Curse"
align = 1

[node name="Choice" type="Button" parent="GameMargin/ChooserContainer/CurseChooser"]
margin_top = 53.0
margin_right = 165.0
margin_bottom = 91.0
focus_neighbour_left = NodePath("../Choice3")
focus_neighbour_top = NodePath("../Choice3")
focus_neighbour_right = NodePath("../Choice2")
focus_neighbour_bottom = NodePath("../Choice2")
shortcut = SubResource( 7 )
text = "Ps are Qs"

[node name="Choice2" type="Button" parent="GameMargin/ChooserContainer/CurseChooser"]
margin_top = 106.0
margin_right = 165.0
margin_bottom = 144.0
focus_neighbour_left = NodePath("../Choice")
focus_neighbour_top = NodePath("../Choice")
focus_neighbour_right = NodePath("../Choice3")
focus_neighbour_bottom = NodePath("../Choice3")
shortcut = SubResource( 9 )
text = "Ps are Qs"

[node name="Choice3" type="Button" parent="GameMargin/ChooserContainer/CurseChooser"]
margin_top = 159.0
margin_right = 165.0
margin_bottom = 197.0
focus_neighbour_left = NodePath("../Choice2")
focus_neighbour_top = NodePath("../Choice2")
focus_neighbour_right = NodePath("../Choice")
focus_neighbour_bottom = NodePath("../Choice")
shortcut = SubResource( 11 )
text = "Ps are Qs"

[node name="SettingsContainer" type="CenterContainer" parent="GameMargin"]
margin_left = 25.0
margin_top = 25.0
margin_right = 643.0
margin_bottom = 395.0

[node name="Panel" type="PanelContainer" parent="GameMargin/SettingsContainer"]
margin_left = 161.0
margin_top = 72.0
margin_right = 457.0
margin_bottom = 298.0

[node name="Row" type="VBoxContainer" parent="GameMargin/SettingsContainer/Panel"]
margin_left = 10.0
margin_top = 5.0
margin_right = 286.0
margin_bottom = 221.0

[node name="SettingsLabel" type="Label" parent="GameMargin/SettingsContainer/Panel/Row"]
margin_right = 276.0
margin_bottom = 28.0
text = "Settings"
align = 1

[node name="HSeparator" type="HSeparator" parent="GameMargin/SettingsContainer/Panel/Row"]
margin_top = 32.0
margin_right = 276.0
margin_bottom = 36.0

[node name="MusicContainer" type="HBoxContainer" parent="GameMargin/SettingsContainer/Panel/Row"]
margin_top = 40.0
margin_right = 276.0
margin_bottom = 78.0

[node name="Label" type="Label" parent="GameMargin/SettingsContainer/Panel/Row/MusicContainer"]
margin_top = 5.0
margin_right = 60.0
margin_bottom = 33.0
rect_min_size = Vector2( 60, 0 )
text = "Music"

[node name="VBoxContainer" type="VBoxContainer" parent="GameMargin/SettingsContainer/Panel/Row/MusicContainer"]
margin_left = 64.0
margin_right = 203.0
margin_bottom = 38.0
size_flags_horizontal = 3
alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="GameMargin/SettingsContainer/Panel/Row/MusicContainer/VBoxContainer"]
margin_top = 11.0
margin_right = 139.0
margin_bottom = 27.0
rect_min_size = Vector2( 100, 0 )
max_value = 4.0
value = 2.0
tick_count = 5
ticks_on_borders = true

[node name="MuteMusicButton" type="Button" parent="GameMargin/SettingsContainer/Panel/Row/MusicContainer"]
margin_left = 207.0
margin_right = 276.0
margin_bottom = 38.0
text = "Mute"

[node name="SoundContainer" type="HBoxContainer" parent="GameMargin/SettingsContainer/Panel/Row"]
margin_top = 82.0
margin_right = 276.0
margin_bottom = 120.0

[node name="Label" type="Label" parent="GameMargin/SettingsContainer/Panel/Row/SoundContainer"]
margin_top = 5.0
margin_right = 60.0
margin_bottom = 33.0
rect_min_size = Vector2( 60, 0 )
text = "Sound"

[node name="VBoxContainer" type="VBoxContainer" parent="GameMargin/SettingsContainer/Panel/Row/SoundContainer"]
margin_left = 64.0
margin_right = 203.0
margin_bottom = 38.0
size_flags_horizontal = 3
alignment = 1

[node name="SoundVolumeSlider" type="HSlider" parent="GameMargin/SettingsContainer/Panel/Row/SoundContainer/VBoxContainer"]
margin_top = 11.0
margin_right = 139.0
margin_bottom = 27.0
rect_min_size = Vector2( 100, 0 )
max_value = 4.0
value = 2.0
tick_count = 5
ticks_on_borders = true

[node name="MuteSoundButton" type="Button" parent="GameMargin/SettingsContainer/Panel/Row/SoundContainer"]
margin_left = 207.0
margin_right = 276.0
margin_bottom = 38.0
text = "Mute"

[node name="FontContainer" type="HBoxContainer" parent="GameMargin/SettingsContainer/Panel/Row"]
margin_top = 124.0
margin_right = 276.0
margin_bottom = 166.0
alignment = 1

[node name="FontChange" type="CheckButton" parent="GameMargin/SettingsContainer/Panel/Row/FontContainer"]
margin_left = 27.0
margin_right = 249.0
margin_bottom = 42.0
text = "Alternate Font"

[node name="HSeparator2" type="HSeparator" parent="GameMargin/SettingsContainer/Panel/Row"]
margin_top = 170.0
margin_right = 276.0
margin_bottom = 174.0

[node name="ButtonsContainer" type="HBoxContainer" parent="GameMargin/SettingsContainer/Panel/Row"]
margin_top = 178.0
margin_right = 276.0
margin_bottom = 216.0
alignment = 1

[node name="HelpButton" type="Button" parent="GameMargin/SettingsContainer/Panel/Row/ButtonsContainer"]
margin_right = 94.0
margin_bottom = 38.0
text = "Tutorial"

[node name="CreditsButton" type="Button" parent="GameMargin/SettingsContainer/Panel/Row/ButtonsContainer"]
margin_left = 98.0
margin_right = 182.0
margin_bottom = 38.0
text = "Credits"

[node name="RestartButton" type="Button" parent="GameMargin/SettingsContainer/Panel/Row/ButtonsContainer"]
margin_left = 186.0
margin_right = 276.0
margin_bottom = 38.0
text = "Restart"

[node name="SettingOpener" type="Control" parent="GameMargin"]
margin_left = 25.0
margin_top = 25.0
margin_right = 643.0
margin_bottom = 395.0
mouse_filter = 2

[node name="SettingsButton" type="Button" parent="GameMargin/SettingOpener"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -95.0
margin_top = -38.0
grow_horizontal = 0
grow_vertical = 0
shortcut = SubResource( 4 )
text = "Settings"

[node name="CompleteSpawn" type="Control" parent="GameMargin"]
margin_left = 25.0
margin_top = 25.0
margin_right = 643.0
margin_bottom = 395.0
mouse_filter = 2

[node name="HelpContainer" type="PanelContainer" parent="GameMargin"]
visible = false
margin_left = 25.0
margin_top = 25.0
margin_right = 643.0
margin_bottom = 395.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameMargin/HelpContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 608.0
margin_bottom = 365.0

[node name="HBoxContainer" type="HBoxContainer" parent="GameMargin/HelpContainer/VBoxContainer"]
margin_right = 598.0
margin_bottom = 36.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="GameMargin/HelpContainer/VBoxContainer/HBoxContainer"]
margin_left = 193.0
margin_right = 405.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="GameMargin/HelpContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 212.0
margin_bottom = 28.0
text = "Mind your Ps and Qs"

[node name="HSeparator" type="HSeparator" parent="GameMargin/HelpContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 212.0
margin_bottom = 36.0

[node name="HBoxContainer2" type="HBoxContainer" parent="GameMargin/HelpContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 598.0
margin_bottom = 318.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="GameMargin/HelpContainer/VBoxContainer/HBoxContainer2"]
margin_right = 598.0
margin_bottom = 278.0
scroll_horizontal_enabled = false

[node name="Label" type="Label" parent="GameMargin/HelpContainer/VBoxContainer/HBoxContainer2/ScrollContainer"]
margin_right = 598.0
margin_bottom = 276.0
rect_min_size = Vector2( 598, 0 )
text = "A portal has opened and devils are pouring through.  We need to curse them back to hell.  However, a cursed aura surrounds the portal and affects your ability to think clearly.
Can you deal with these devils?

To play: Type two words (one from the left list and one from the right) to combine into an insult.  Be mindful of your current curses as they will affect the letters in the lists making them harder to read.  Harder curses give higher scores."
autowrap = true

[node name="HBoxContainer3" type="HBoxContainer" parent="GameMargin/HelpContainer/VBoxContainer"]
margin_top = 322.0
margin_right = 598.0
margin_bottom = 360.0
alignment = 2

[node name="HelpCloseButton" type="Button" parent="GameMargin/HelpContainer/VBoxContainer/HBoxContainer3"]
margin_left = 532.0
margin_right = 598.0
margin_bottom = 38.0
text = "Close"

[node name="CreditsContainer" type="PanelContainer" parent="GameMargin"]
visible = false
margin_left = 25.0
margin_top = 25.0
margin_right = 643.0
margin_bottom = 395.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameMargin/CreditsContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 608.0
margin_bottom = 365.0

[node name="HBoxContainer" type="HBoxContainer" parent="GameMargin/CreditsContainer/VBoxContainer"]
margin_right = 598.0
margin_bottom = 36.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="GameMargin/CreditsContainer/VBoxContainer/HBoxContainer"]
margin_left = 267.0
margin_right = 331.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="GameMargin/CreditsContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 64.0
margin_bottom = 28.0
text = "Credits"

[node name="HSeparator" type="HSeparator" parent="GameMargin/CreditsContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 64.0
margin_bottom = 36.0

[node name="HBoxContainer2" type="HBoxContainer" parent="GameMargin/CreditsContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 598.0
margin_bottom = 318.0
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="GameMargin/CreditsContainer/VBoxContainer/HBoxContainer2"]
margin_right = 598.0
margin_bottom = 278.0
rect_min_size = Vector2( 598, 0 )
rect_pivot_offset = Vector2( 259, 119 )
bbcode_enabled = true
bbcode_text = "[center]Created by: Scott Hood
As an entry to Godot Wild Jam #54 with the theme of \"Curses\"
[url=https://hoodscott.itch.io/mind-your-ps-are-qs][color=blue]https://hoodscott.itch.io/mind-your-ps-are-qs[/color][/url]
[url=https://itch.io/jam/godot-wild-jam-54][color=blue]https://itch.io/jam/godot-wild-jam-54[/color][/url]

Background Image: \"Chap-books of the eighteenth century\" (1882), page 62, Internet Archive Book Images
[url=https://www.flickr.com/photos/internetarchivebookimages/14780158621][color=blue]https://www.flickr.com/photos/internetarchivebookimages/14780158621[/color][/url]

Devil Head: Amy Hood

Font: Augusta, Dieter Steffmann
[url=http://www.steffmann.de][color=blue]http://www.steffmann.de[/color][/url]

Font: OpenDyslexic, Abbie Gonzalez
[url=https://opendyslexic.org][color=blue]https://opendyslexic.org[/color][/url]

Game Engine: Godot
[url=https://godotengine.org][color=blue]https://godotengine.org[/color][/url]

Music: The Medieval Banquet, Shane Ivers
[url=https://www.silvermansound.com/free-music/the-medieval-banquet][color=blue]https://www.silvermansound.com/free-music/the-medieval-banquet[/color][/url]

Percussion: Medieval Perc, menegass
[url=https://freesound.org/people/menegass/packs/5824][color=blue]https://freesound.org/people/menegass/packs/5824[/color][/url]

Trumpet: Medieval Fanfare, tobyk
[url=https://freesound.org/s/26198][color=blue]https://freesound.org/s/26198[/color][/url][center]"
text = "Created by: Scott Hood
As an entry to Godot Wild Jam #54 with the theme of \"Curses\"
https://hoodscott.itch.io/mind-your-ps-are-qs
https://itch.io/jam/godot-wild-jam-54

Background Image: \"Chap-books of the eighteenth century\" (1882), page 62, Internet Archive Book Images
https://www.flickr.com/photos/internetarchivebookimages/14780158621

Devil Head: Amy Hood

Font: Augusta, Dieter Steffmann
http://www.steffmann.de

Font: OpenDyslexic, Abbie Gonzalez
https://opendyslexic.org

Game Engine: Godot
https://godotengine.org

Music: The Medieval Banquet, Shane Ivers
https://www.silvermansound.com/free-music/the-medieval-banquet

Percussion: Medieval Perc, menegass
https://freesound.org/people/menegass/packs/5824

Trumpet: Medieval Fanfare, tobyk
https://freesound.org/s/26198"

[node name="HBoxContainer3" type="HBoxContainer" parent="GameMargin/CreditsContainer/VBoxContainer"]
margin_top = 322.0
margin_right = 598.0
margin_bottom = 360.0
alignment = 2

[node name="CreditsCloseButton" type="Button" parent="GameMargin/CreditsContainer/VBoxContainer/HBoxContainer3"]
margin_left = 532.0
margin_right = 598.0
margin_bottom = 38.0
text = "Close"

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/incorrect = SubResource( 2 )

[node name="AudioManager" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="GameMargin/StartContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="GameMargin/ChooserContainer/CurseChooser/Choice" to="." method="_on_Choice_pressed"]
[connection signal="pressed" from="GameMargin/ChooserContainer/CurseChooser/Choice2" to="." method="_on_Choice2_pressed"]
[connection signal="pressed" from="GameMargin/ChooserContainer/CurseChooser/Choice3" to="." method="_on_Choice3_pressed"]
[connection signal="value_changed" from="GameMargin/SettingsContainer/Panel/Row/MusicContainer/VBoxContainer/MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="pressed" from="GameMargin/SettingsContainer/Panel/Row/MusicContainer/MuteMusicButton" to="." method="_on_MuteMusicButton_pressed"]
[connection signal="value_changed" from="GameMargin/SettingsContainer/Panel/Row/SoundContainer/VBoxContainer/SoundVolumeSlider" to="." method="_on_SoundVolumeSlider_value_changed"]
[connection signal="pressed" from="GameMargin/SettingsContainer/Panel/Row/SoundContainer/MuteSoundButton" to="." method="_on_MuteSoundButton_pressed"]
[connection signal="toggled" from="GameMargin/SettingsContainer/Panel/Row/FontContainer/FontChange" to="." method="_on_FontChange_toggled"]
[connection signal="pressed" from="GameMargin/SettingsContainer/Panel/Row/ButtonsContainer/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="GameMargin/SettingsContainer/Panel/Row/ButtonsContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="GameMargin/SettingsContainer/Panel/Row/ButtonsContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="GameMargin/SettingOpener/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="GameMargin/HelpContainer/VBoxContainer/HBoxContainer3/HelpCloseButton" to="." method="_on_HelpCloseButton_pressed"]
[connection signal="meta_clicked" from="GameMargin/CreditsContainer/VBoxContainer/HBoxContainer2/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="pressed" from="GameMargin/CreditsContainer/VBoxContainer/HBoxContainer3/CreditsCloseButton" to="." method="_on_CreditsCloseButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
